# macintosh-c-by-example

./: CMakeLists.txt  README.md  c_by_example_disk.sit
04-HeyMac/: CMakeLists.txt  Hey.c
06-MiniGenApp/: AboutBox.c  AboutBoxPr.h  AppConstants.h  AppGlobals.h  AppInit.c  AppInitPr.h  AppTypes.h  CMakeLists.txt  DialogUtil.c  DialogUtilPr.h  Display.c  DisplayPr.h  DocUtil.c  DocUtilPr.h  FileUtil.c  FileUtilPr.h  MenuConstants.h  MenuUtil.c  MenuUtilPr.h  MiscUtil.c  MiscUtilPr.h  Readme 1st  Shell.c  ShellPr.h  Version.h  WindowUtil.c  WindowUtilPr.h  miniGenApp.r
07-MultiGenApp/: AboutBox.c  AboutBoxPr.h  AppConstants.h  AppGlobals.h  AppInit.c  AppInitPr.h  AppTypes.h  CMakeLists.txt  DialogUtil.c  DialogUtilPr.h  Display.c  DisplayPr.h  DocUtil.c  DocUtilPr.h  FileUtil.c  FileUtilPr.h  MenuConstants.h  MenuUtil.c  MenuUtilPr.h  MiscUtil.c  MiscUtilPr.h  Readme 1st  Shell.c  ShellPr.h  StrRsrcDefs.h  Version.h  WindowUtil.c  WindowUtilPr.h  multiGenApp.r
08-NonGenApp/: AboutBox.c  AboutBoxPr.h  AppConstants.h  AppGlobals.h  AppInit.c  AppInitPr.h  AppTypes.h  CMakeLists.txt  DialogUtil.c  DialogUtilPr.h  Display.c  DisplayPr.h  DocUtil.c  DocUtilPr.h  FileUtil.c  FileUtilPr.h  MenuConstants.h  MenuUtil.c  MenuUtilPr.h  MiscUtil.c  MiscUtilPr.h  Readme 1st  Shell.c  ShellPr.h  StrRsrcDefs.h  TextUtil.c  Version.h  WindowUtil.c  WindowUtilPr.h  nonGenApp.r
09-Loser/: AppConstants.h  AppGlobals.h  AppTypes.h  CMakeLists.txt  DialogUtil.c  DialogUtilPr.h  FileUtil.c  FileUtilPr.h  Loser.c  Loser.r  LoserPr.h  MiscUtil.c  MiscUtilPr.h  Readme  StrRsrcDefs.h  (+2 more)
(+36 files in other folders)
